Fixed CSS Issues For Mobile
Links on the box divs for projects was too large a font size. This added to much space and messed with the mobile layout.

--- a/tkstyles.css
+++ b/tkstyles.css
@@ -232,7 +232,7 @@ header h1{
 
 .boxLink{
 	opacity: 0;
-	font-size:15em;
+	font-size:10em;
 }
 
 /* scrolling */
